tests/negative/typecheck/try-out-fn.orng
let const y: Char!Int = .ok <- 0
let const x = try y